// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Newspaper checkGrammar=false 1`] = `
<Fragment>
  <Section
    checkGrammar={false}
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper checkGrammar=true 1`] = `
<Fragment>
  <Section
    checkGrammar={true}
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper checkHighlight=false 1`] = `
<Fragment>
  <Section
    checkHighlight={false}
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper checkHighlight=true 1`] = `
<Fragment>
  <Section
    checkHighlight={true}
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper checkSpaces=false 1`] = `
<Fragment>
  <Section
    checkSpaces={false}
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper checkSpaces=true 1`] = `
<Fragment>
  <Section
    checkSpaces={true}
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper className="my-classname" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text my-classname uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper className="test-classname" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text test-classname uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="brown" 1`] = `
<Fragment>
  <Section
    className="color-schema-brown uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="brown-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-brown-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="cyan" 1`] = `
<Fragment>
  <Section
    className="color-schema-cyan uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="cyan-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-cyan-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="default" 1`] = `
<Fragment>
  <Section
    className="color-schema-default uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="green" 1`] = `
<Fragment>
  <Section
    className="color-schema-green uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="green-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-green-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="grey" 1`] = `
<Fragment>
  <Section
    className="color-schema-grey uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="grey-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-grey-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="orange" 1`] = `
<Fragment>
  <Section
    className="color-schema-orange uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="orange-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-orange-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="pink" 1`] = `
<Fragment>
  <Section
    className="color-schema-pink uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="pink-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-pink-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="purple" 1`] = `
<Fragment>
  <Section
    className="color-schema-purple uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="purple-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-purple-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="red" 1`] = `
<Fragment>
  <Section
    className="color-schema-red uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="red-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-red-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="yellow" 1`] = `
<Fragment>
  <Section
    className="color-schema-yellow uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper colorSchema="yellow-rich" 1`] = `
<Fragment>
  <Section
    className="color-schema-yellow-rich uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper columnsCount=1 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-1"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper columnsCount=2 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper columnsCount=3 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-3"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper columnsCount=4 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-4"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper columnsCount=5 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-5"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper columnsCount=6 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-6"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper content="This is Content from ContentMixin" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    content="This is Content from ContentMixin"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper content=12345 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    content={12345}
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper controlled=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper controlled=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper default props 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper disabled=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper disabled=false 3`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper disabled=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    disabled={true}
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper disabled=true 3`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    disabled={true}
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper docKit examples UU5.Bricks.Newspaper should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="iiROOT"
  style={Object {}}
  title={null}
>
  <Newspaper
    columnsCount={3}
    id="uuID"
    key="uuID"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas libero. Aliquam erat volutpat. Duis condimentum augue id magna semper rutrum. Nam quis nulla. Etiam commodo dui eget wisi. Fusce suscipit libero eget elit. Etiam bibendum elit eget erat. Vestibulum erat nulla, ullamcorper nec,rutrum non, nonummy ac, erat. Etiam neque. Vivamus luctus egestas leo. Integer in sapien. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Donec quis nibh at felis congue commodo. Pellentesque arcu. In enim a arcu imperdiet malesuada. Duis bibendum, lectus ut viverra rhoncus, dolor nunc faucibus libero, eget facilisis enim ipsum id lacus. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Maecenas fermentum, sem in pharetra pellentesque, velit turpis volutpat ante, in pharetra metus odio a lectus. Duis sapien nunc, commodo et, interdum suscipit, sollicitudin et, dolor. Fusce aliquam vestibulum ipsum. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Aenean id metus id velit ullamcorper pulvinar.
  </Newspaper>
</div>
`;

exports[`UU5.Bricks.Newspaper dynamic=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper dynamic=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    dynamic={true}
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    footer={
      <div>
        Footer of section
      </div>
    }
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper fullTextSearchPriority=0 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu-fulltextsearch-0 uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper fullTextSearchPriority=0 2`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu-fulltextsearch-0 uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    header={
      <div>
        Header of section
      </div>
    }
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper hidden=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper hidden=false 3`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper hidden=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    hidden={true}
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper hidden=true 3`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    hidden={true}
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper id="myId" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="myId-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper id="test-id" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="test-id-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper ignoreHTML=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper ignoreHTML=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level="0" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level="0"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level="1" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level="1"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level="2" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level="2"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level="3" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level="3"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level="4" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level="4"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level="5" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level="5"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level="6" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level="6"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level=0 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level={0}
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level=1 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level={1}
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level=2 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level={2}
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level=3 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level={3}
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level=4 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level={4}
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level=5 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level={5}
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper level=6 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    level={6}
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper mainAttrs=undefined 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper name="myName" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    name="myName-inner"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="bigBox" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    nestingLevel="bigBox"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="bigBoxCollection" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    nestingLevel="bigBoxCollection"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="box" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    nestingLevel="box"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="box" 3`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    nestingLevel="box"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="boxCollection" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    nestingLevel="boxCollection"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="inline" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_domNode": null,
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "columnsCount": 2,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "inline",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Newspaper",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Upravit zprávy",
          "en": "Edit newspaper",
          "uk": "Редагувати газету",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="inline" 3`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_domNode": null,
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "columnsCount": 2,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "inline",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Newspaper",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Upravit zprávy",
          "en": "Edit newspaper",
          "uk": "Редагувати газету",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="page" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    nestingLevel="page"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="smallBox" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_domNode": null,
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "columnsCount": 2,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "smallBox",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Newspaper",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Upravit zprávy",
          "en": "Edit newspaper",
          "uk": "Редагувати газету",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="smallBoxCollection" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_domNode": null,
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "columnsCount": 2,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "smallBoxCollection",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Newspaper",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Upravit zprávy",
          "en": "Edit newspaper",
          "uk": "Редагувати газету",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Zprávy",
          "en": "Newspaper",
          "uk": "Газета",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
/>
`;

exports[`UU5.Bricks.Newspaper nestingLevel="spa" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    nestingLevel="spa"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper noPrint=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper noPrint=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper pureRender=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper pureRender=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    pureRender={true}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper selected=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper selected=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    selected={true}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper style="padding:8px; borderRadius: 2px" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper style={"backgroundColor":"red","color":"blue"} 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper style={"margin":8} 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    style={
      Object {
        "margin": 8,
      }
    }
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper textCorrector=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    textCorrector={false}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper textCorrector=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
    textCorrector={true}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper tooltip="My Tooltip" 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={
      Object {
        "title": "My Tooltip",
      }
    }
    tooltip="My Tooltip"
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper underline=false 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;

exports[`UU5.Bricks.Newspaper underline=true 1`] = `
<Fragment>
  <Section
    className="uu5-bricks-newspaper uu5-common-text uu5-common-newspaper-layout-2"
    id="uuID-inner"
    mainAttrs={Object {}}
  />
</Fragment>
`;
